@@ -45,7 +45,8 @@ v4.0-cvs
 v3.3.9-cvs
 ----------
 
-[mjr] Don't allow fixed blocks to be changed to another type (Bug: 9141).
+[mms] On invalid token during logout, redirect to initial page (Bug #7669).
+[mjr] Don't allow fixed blocks to be changed to another type (Bug #9141).
 [jan] Show future alarms in the alarm management screen too.
 [mjr] Fix bug in Horde_Cache that would prevent cache entries from being
       expired in certain cases, and prevent cache key collisions.
